Connecting content with Author and Book bios