@@ -7,10 +7,15 @@ import com.phuongnh.personal.library_management_system.BookCopy.BookCopyReposito
 import com.phuongnh.personal.library_management_system.BookCopy.BookCopyStatus;
 import com.phuongnh.personal.library_management_system.Category.Category;
 import com.phuongnh.personal.library_management_system.Category.CategoryRepository;
+import com.phuongnh.personal.library_management_system.Content.Content;
+import com.phuongnh.personal.library_management_system.Content.ContentRepository;
+import com.phuongnh.personal.library_management_system.Content.ContentType;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -25,6 +30,8 @@ public class BookService {
     private CategoryRepository categoryRepository;
     @Autowired
     private BookCopyRepository bookCopyRepository;
+    @Autowired
+    private ContentRepository contentRepository;
     @Autowired
     private BookMapper bookMapper;
 
@@ -69,16 +76,31 @@ public class BookService {
             throw new RuntimeException("At least one category ID must be provided");
         }
 
-        book = bookRepository.save(book);
+        bookRepository.save(book);
 
-        if (bookDTO.getNumberOfCopies() > 0) {
-            for (int i = 0; i < bookDTO.getNumberOfCopies(); i++) {
-                BookCopy bookCopy = new BookCopy();
-                bookCopy.setBook(book);
-                bookCopy.setStatus(BookCopyStatus.AVAILABLE);
-                bookCopyRepository.save(bookCopy);
-            }
+        if (bookDTO.getBookBio() == null) {
+            Content defaultBookBio = new Content();
+            defaultBookBio.setTitle("");
+            defaultBookBio.setContent("");
+            defaultBookBio.setContentType(ContentType.valueOf("BOOK_BIO"));
+            defaultBookBio.setBookBio(book);
+            contentRepository.save(defaultBookBio);
+            book.setBookBio(defaultBookBio);
         }
+
+        bookRepository.save(book);
+
+        List<BookCopy> copies = new ArrayList<>();
+        for (int i = 0; i < bookDTO.getNumberOfCopies(); i++) {
+            BookCopy bookCopy = new BookCopy();
+            bookCopy.setBook(book);
+            bookCopy.setStatus(BookCopyStatus.AVAILABLE);
+            bookCopyRepository.save(bookCopy);
+            copies.add(bookCopy);
+        }
+
+        book.setCopies(copies);
+        bookRepository.save(book);
 
         return bookMapper.toDTO(book);
     }
@@ -87,9 +109,25 @@ public class BookService {
         Book existingBook = bookRepository.findById(id).orElseThrow(() -> new RuntimeException("Book not found"));
         Book updatedBook = bookMapper.updateEntityFromDTO(bookDTO, existingBook);
 
-        int existingNumberOfCopies = existingBook.getCopies().size();
-        int newNumberOfCopies = bookDTO.getNumberOfCopies();
-        if (newNumberOfCopies != existingNumberOfCopies) {
+        if (bookDTO.getAuthorIds() != null && !bookDTO.getAuthorIds().isEmpty()) {
+            List<Author> authors = authorRepository.findAllById(bookDTO.getAuthorIds());
+            if (authors.size() != bookDTO.getAuthorIds().size()) {
+                throw new RuntimeException("Some author IDs are invalid or not found");
+            }
+            updatedBook.setAuthors(authors);
+        }
+
+        if (bookDTO.getCategoryIds() != null && !bookDTO.getCategoryIds().isEmpty()) {
+            List<Category> categories = categoryRepository.findAllById(bookDTO.getCategoryIds());
+            if (categories.size() != bookDTO.getCategoryIds().size()) {
+                throw new RuntimeException("Some category IDs are invalid or not found");
+            }
+            updatedBook.setCategories(categories);
+        }
+
+        Integer existingNumberOfCopies = existingBook.getCopies().size();
+        Integer newNumberOfCopies = bookDTO.getNumberOfCopies();
+        if (!Objects.equals(newNumberOfCopies, existingNumberOfCopies) && newNumberOfCopies != null) {
             if (newNumberOfCopies > existingNumberOfCopies) {
                 // Add new copies
                 for (int i = 0; i < newNumberOfCopies - existingNumberOfCopies; i++) {
@@ -99,10 +137,9 @@ public class BookService {
                     bookCopyRepository.save(bookCopy);
                 }
             } else {
-                // Remove extra copies (only remove AVAILABLE copies)
                 List<BookCopy> availableCopies = existingBook.getCopies().stream()
                         .filter(copy -> copy.getStatus() == BookCopyStatus.AVAILABLE)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 int copiesToRemove = existingNumberOfCopies - newNumberOfCopies;
                 for (int i = 0; i < copiesToRemove && i < availableCopies.size(); i++) {
@@ -110,6 +147,14 @@ public class BookService {
                 }
             }
         }
+
+        if (bookDTO.getBookBio() != null && updatedBook.getBookBio() != null) {
+            Content bookBio = updatedBook.getBookBio();
+            bookBio.setTitle(bookDTO.getBookBio().getTitle());
+            bookBio.setContent(bookDTO.getBookBio().getContent());
+            contentRepository.save(bookBio);
+        }
+
         return bookMapper.toDTO(bookRepository.save(updatedBook));
     }
 
